fix user header spacing and user index scroll

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,10 +24,6 @@ body {
   background-size: 135% 100%;
 }
 
-h1 {
-  margin-bottom: 1em;
-}
-
 a {
   text-decoration: none;
   color: $purple;
