--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -3,7 +3,10 @@
 .login-page {
   .login-container {
     width: 18em;
-    
+  }
+
+  .btn-primary {
+    margin-top: 1em;
   }
 
   .form-control {
